# fargate-stats-reporter

./: .travis.yml  Cargo.toml  Dockerfile  README.md
src/: cloudwatch.rs  config.rs  main.rs  metadata_v2.rs
src/tests/: cloudwatch.rs  config.rs  container_stats.rs  maintain_queue.rs  metrics_from_stats.rs  mod.rs  parse_args.rs  report_to_cloudwatch.rs  task_metadata.rs
