[package]
name = "fargate-stats-reporter"
version = "0.1.0"
authors = ["Bittrance <anders.qvist@burtcorp.com>"]
edition = "2018"

[dependencies]
args = "2.2.0"
chrono = "0.4.6"
failure = "*"
getopts = "0.2.18"
log = "0.4.1"
reqwest = "0.9.5"
rusoto_cloudwatch = { git = "https://github.com/bittrance/rusoto", branch = "mock-dispatch-errors-take-2" }
rusoto_core = { git = "https://github.com/bittrance/rusoto", branch = "mock-dispatch-errors-take-2" }
serde_json = "1.0.33"
stderrlog = "0.4.1"

[dev-dependencies]
mockito = "*"
rusoto_mock = { git = "https://github.com/bittrance/rusoto", branch = "mock-dispatch-errors-take-2" }
serde_urlencoded = "*"

[profile.release]
lto = true
panic = "abort"
